Squash margins in body tag to fix iframe

--- a/trunk/torchrelay/maps/stylesheets/torchRelay.css
+++ b/trunk/torchrelay/maps/stylesheets/torchRelay.css
@@ -2,6 +2,8 @@
 body
 {
 	font-family: sans-serif;
+	padding: 0px;
+	margin:0px;
 }
 div, ul, li, a{
   margin:0;
